HelloUltraviolet/Fixtures/RejectedSource/Procedures/ContractEntryCapability/Expected.uv
//! Expected diagnostic metadata for the ContractEntryCapability rejected-source specimen.

expectedDiagnostic("E-CON-0415", "diag-table.15.ProcedureContractEntryDiagnostics")
